Fix alignment footer css

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -844,10 +844,11 @@ footer
   margin: 0
   .centered
     /* max-width: 1200px */
-    margin: 20px auto
-    display: flex
-    justify-content: space-between
+    padding: 10px 0
+    text-align: center
     .footer-logo
+      width: 240px
+      margin: auto
       .logo-container
         text-align: center
         float: left
@@ -861,8 +862,8 @@ footer
     .contact-number
       position: absolute
       left: 0
-      margin: 10px 25px
-      padding: 5px
+      margin: 3px 25px
+      text-align: left
       img
         width: 190px
       .commercial-contact, .client-contact
